--- a/README.html
+++ b/README.html
@@ -367,6 +367,7 @@ code {
   </script>
 <h1 id="ypc%E3%81%A7%E7%99%BA%E8%A1%A8%E3%81%97%E3%81%9F%E8%B3%87%E6%96%99">YPCで発表した資料</h1>
 <p>自分が過去に発表した資料は、ここにまとめていきます。</p>
+<p><a href="https://phys-ken.github.io/YPC_mydata/export/#/">2021年2月例会</a></p>
 
 </body>
 </html>
