--- a/rokuga.html
+++ b/rokuga.html
@@ -396,6 +396,14 @@ code {
 <h3 id="%E9%8C%B2%E7%94%BB%E7%92%B0%E5%A2%83%E8%A7%A3%E8%AA%AC">録画環境(解説)</h3>
 <p><img width="100%" src="fig/desk_kaisetu.png" /><span style="font-size:50%"></span></p>
 <hr>
+<ul>
+<li>注意
+<ul>
+<li>私物端末の持ち込みについては、ルールに従うこと</li>
+</ul>
+</li>
+</ul>
+<hr>
 <h3 id="%E9%8C%B2%E7%94%BB%E4%B8%AD%E3%81%AE%E7%94%BB%E9%9D%A2">録画中の画面</h3>
 <img width = "45%" src = "fig/screen.jpeg">
 <img width = "45%" src = "fig/pcscreen.jpeg">
