--- a/rokuga.html
+++ b/rokuga.html
@@ -396,6 +396,9 @@ code {
 <h3 id="%E9%8C%B2%E7%94%BB%E7%92%B0%E5%A2%83%E8%A7%A3%E8%AA%AC">録画環境(解説)</h3>
 <p><img width="100%" src="fig/desk_kaisetu.png" /><span style="font-size:50%"></span></p>
 <hr>
+<h2 id="%E3%81%93%E3%82%93%E3%81%AA%E6%84%9F%E3%81%98">こんな感じ</h2>
+<img width = "80%" src = "fig/zu.jpg">
+<hr>
 <ul>
 <li>注意
 <ul>
@@ -406,7 +409,8 @@ code {
 <hr>
 <h3 id="%E9%8C%B2%E7%94%BB%E4%B8%AD%E3%81%AE%E7%94%BB%E9%9D%A2">録画中の画面</h3>
 <img width = "45%" src = "fig/screen.jpeg">
-<img width = "45%" src = "fig/pcscreen.jpeg">
+<img width = "45%" src = "fig/pcscreen.jpeg">  
+<p>左:スクリーン　　　　右:OBSの画面</p>
 <hr>
 <h3 id="%E9%8C%B2%E7%94%BB%E3%81%A7%E3%81%8D%E3%81%9F%E3%82%82%E3%81%AE">録画できたもの</h3>
 <p><img src="fig/rokuga.gif" alt="OBS"></p>
